--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p style="font-size:15px;"><strong>Business/Organization Address*: </strong></p>
           <p style="font-size:15px; padding-left:150px;"><strong>Street*: </strong><input name="bus_street" size="50" placeholder="Business/Organization Street Address..." required="required" type="text"></p>
           <p style="font-size:15px; padding-left:150px;"><strong>Suite#: </strong><input name="bus_suite" size="15" pattern="[a-zA-Z0-9]+" placeholder="Suite#..." type="text"></p>
-          <p style="font-size:15px; padding-left:150px;"><strong>City*: </strong><input name="bus_city" size="50" pattern="[a-zA-Z]" placeholder="Business/Organization City..." required="required" type="text"></p>
+          <p style="font-size:15px; padding-left:150px;"><strong>City*: </strong><input name="bus_city" size="50" pattern="[a-zA-Z]+" placeholder="Business/Organization City..." required="required" type="text"></p>
           <p style="font-size:15px; padding-left:150px;"><strong>State*: </strong>
             <select name="bus_state" size="1">
               <option selected="selected" value="">Business/Organization State...</option>
