Updated mail.php location

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1><center><img src="tchs-tor-2.jpg" alt="" title=""><b>TCHS c/o 1991</b><img src="tchs-tor-2.jpg" alt="" title=""></h1></center>
     <h2><center><b>Business/Organization Advertisement/Acknowledgement Registration Form</center></b></h2>
     <h3><strong>* = Required</strong></h3>
-    <form action="mail.php" target="_blank" method="post">
+    <form action="scripts/mail.php" target="_blank" method="post">
       <p style="font-size:15px;"><strong>Business/Organization Name*: </strong><input name="bus_name" size="50" pattern="[a-zA-Z0-9 ]+" placeholder="Business/Organization Name..." required="required" type="text"> </p>
       <p style="font-size:15px;"><strong>Business/Organization Owner*: </strong><input name="bus_owner" size="40" pattern="[a-zA-Z ]+"  placeholder="Business/Organization Owner..." required="required" type="text"></p>
       <fieldset>
