--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        }
 
     </style>
-    <title>Business/Organization Advertisement/Acknowledgement Registration Form</title>
+    <title>TCHS c/o 1991</title>
   </head>
   <body>
     <br>
