--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <br>
-    <h1><center><img src="img/tchs-tor-2.jpg" alt="" title=""><b>TCHS c/o 1991</b><img src="img/tchs-tor-2.jpg" alt="" title=""></h1></center>
+    <h1><center><img src="img\tchs-tor-2.jpg" alt="" title=""><b>TCHS c/o 1991</b><img src="img/tchs-tor-2.jpg" alt="" title=""></h1></center>
     <h2><center><b>Business/Organization Advertisement/Acknowledgement Registration Form</center></b></h2>
     <h3><strong>* = Required</strong></h3>
     <form action="scripts/mail.php" target="_blank" method="post">
