--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
         <center>
           <div class="row">
             <div class="column">
-              <p style="font-size:15px;" style="width:100%"><img src="img\paypal-2.jpg" alt=""><figcaption>PayPal</figcaption></p>
+              <p style="font-size:15px;" style="width:100%"><img src="img/paypal-2.jpg" alt=""><figcaption>PayPal</figcaption></p>
             </div>
             <div class="column">
-              <p style="font-size:15px;"><img src="img\cashapp-2.png" alt=""><figcaption>CashApp</figcaption></p>
+              <p style="font-size:15px;"><img src="img/cashapp-2.png" alt=""><figcaption>CashApp</figcaption></p>
             </div>
             <div class="column">
-              <p style="font-size:15px;"><img src="img\zelle-Logo-2.png" alt=""><figcaption>Zelle</figcaption></p>
+              <p style="font-size:15px;"><img src="img/zelle-Logo-2.png" alt=""><figcaption>Zelle</figcaption></p>
             </div>
             <div class="column">
-              <p style="font-size:15px;"><img src="img\venmo-logo-2.png" alt=""><figcaption>Venmo</figcaption></p>
+              <p style="font-size:15px;"><img src="img/venmo-logo-2.png" alt=""><figcaption>Venmo</figcaption></p>
             </div>
           </div>
         </center><br>
@@ -129,11 +129,11 @@
       <p style="font-size:15px;"><strong>Advertisement Size*: </strong>
         <br><br>
         <center>
-        <input id="full_page" name="full_page" value="Full" type="radio" class="hidden"><img src="img\full_page.jpg" alt=""><center><figcaption>Full Page $20.00</figcaption></center><br>
+        <input id="full_page" name="full_page" value="Full" type="radio" class="hidden"><img src="img/full_page.jpg" alt=""><center><figcaption>Full Page $20.00</figcaption></center><br>
         <br>
-        <input id="half_page" name="half_page" value="Half" type="radio" class="hidden"><img src="img\half_page.jpg" alt=""><center><figcaption>Half Page $10.00</figcaption></center><br>
+        <input id="half_page" name="half_page" value="Half" type="radio" class="hidden"><img src="img/half_page.jpg" alt=""><center><figcaption>Half Page $10.00</figcaption></center><br>
         <br>
-        <input id="quar_page" name="quar_page" value="Quarter" type="radio" class="hidden"><img src="img\quar_page.jpg" alt=""><center><figcaption>Quarter Page $5.00</figcaption></center><br>
+        <input id="quar_page" name="quar_page" value="Quarter" type="radio" class="hidden"><img src="img/quar_page.jpg" alt=""><center><figcaption>Quarter Page $5.00</figcaption></center><br>
         <br>
         </center>
       </p>
